force-app/main/default/objects/IT_Off_Boarding_Request__c/IT_Off_Boarding_Request__c.object-meta.xml
<CustomObject>
    <label>IT Off-Boarding Request</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>IT Off-Boarding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Off-Boarding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>