force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Application_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Application_Checklist__c</fullName>
    <label>Application Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ease</fullName>
            </value>
            <value>
                <fullName>Email_Account</fullName>
                <label>Email Account</label>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Smartsheet</fullName>
            </value>
            <value>
                <fullName>T- sheets</fullName>
            </value>
            <value>
                <fullName>WEX</fullName>
            </value>
            <value>
                <fullName>Salesforce - Conga Deactivated?</fullName>
                <isActive>false</isActive>
                <label>Salesforce - Conga Deactivated?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>