force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>PC - Desktop</fullName>
            </value>
            <value>
                <fullName>PC - Laptop</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Laptop charger</fullName>
            </value>
            <value>
                <fullName>Dock</fullName>
            </value>
            <value>
                <fullName>Key board</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>