force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/HR_Items_completed__c.field-meta.xml
<CustomField>
    <fullName>HR_Items_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Items completed</label>
    <type>Checkbox</type>
</CustomField>