force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/IT_Off_Boarding_Request_Completed__c.field-meta.xml
<CustomField>
    <fullName>IT_Off_Boarding_Request_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Off Boarding Request Completed</label>
    <type>Checkbox</type>
</CustomField>