force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Off_Boarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Off_Boarding_Date__c</fullName>
    <label>Off Boarding Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>