force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Off_Boarding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Off_Boarding_Notes__c</fullName>
    <label>Off Boarding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>