force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Off_Boarding_Request_completed_by_HR__c.field-meta.xml
<CustomField>
    <fullName>Off_Boarding_Request_completed_by_HR__c</fullName>
    <label>Off Boarding Request completed by HR</label>
    <type>Date</type>
</CustomField>