force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Off_Boarding_Request_Completed_by_IT__c.field-meta.xml
<CustomField>
    <fullName>Off_Boarding_Request_Completed_by_IT__c</fullName>
    <label>Off Boarding Request Completed by IT</label>
    <type>Date</type>
</CustomField>