force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alarm code</fullName>
            </value>
            <value>
                <fullName>Badge</fullName>
            </value>
            <value>
                <fullName>Driver Safe Code</fullName>
            </value>
            <value>
                <fullName>Warehouse Code</fullName>
            </value>
            <value>
                <fullName>Warehouse key</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>