force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>related to onboarding request</inlineHelpText>
    <label>Related To</label>
    <referenceTo>IT_On_Boarding_Request__c</referenceTo>
    <relationshipLabel>IT Off-Boarding Requests</relationshipLabel>
    <relationshipName>IT_Off_Boarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>