force-app/main/default/objects/IT_Off_Boarding_Request__c/fields/Salesforce_Access__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Access__c</fullName>
    <label>Salesforce Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Record</fullName>
            </value>
            <value>
                <fullName>Driver Record</fullName>
            </value>
            <value>
                <fullName>Public Groups</fullName>
            </value>
            <value>
                <fullName>Salesforce Login Access</fullName>
            </value>
            <value>
                <fullName>Badge</fullName>
                <isActive>false</isActive>
                <label>Badge</label>
            </value>
            <value>
                <fullName>Default Warehouse</fullName>
                <isActive>false</isActive>
                <label>Default Warehouse</label>
            </value>
            <value>
                <fullName>Warehouse Code</fullName>
                <isActive>false</isActive>
                <label>Warehouse Code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>